# Automata-Group-Project_2021-2022

./: .gitignore  CMakeLists.txt  Coin.cpp  Coin.h  Collectable_DFA.cpp  Collectable_DFA.h  Enemy.cpp  Enemy.h  Key.cpp  Key.h  Maze.cpp  Maze.h  MazeRunner.cpp  MazeRunnerVisNew.cpp  MazeRunnerVisOld.cpp  MazeRunnerVisualisation.cpp  MazeWindow.cpp  MazeWindow.h  MovementChance.cpp  MovementChance.h  MovementState.cpp  MovementState.h  Parser.cpp  Parser.h  Path.cpp  Path.h  Player.cpp  Player.h  README.md  Standard_Values.h  TA_Tog_project_idea(1)(1).docx  Wall.cpp  Wall.h  contract(1)(1).xlsx  miniState.cpp  miniState.h
Algoritems/Jason/: Dummy.txt
Algorithms/Jason/: Dummy.txt
Algorithms/Orfeo/: CMakeLists.txt  DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  Node.cpp  Node.h  RE.cpp  RE.h  README.md  reader.cpp  transition.cpp  transition.h  transitionNFA.cpp  transitionNFA.h
Algorithms/X/: LogoBackground.qrc
Algorithms/X/untitled25/: CMakeLists.txt  DFA.cpp  DFA.h  DFA.json  DFA2.json  NFA.cpp  NFA.h  main.cpp
Help_HTP/: Help.txt  How_To_play.txt
Levels/EnemyTrainer/: Trainig1.txt  Training1.txt  Training2.txt
Levels/JSON-Files/: Level1.json  Level2.json  Level3.json  Level4.json  Level5.json
Levels/SavedGames/: Dummy.txt
Levels/TXT-Files/: Level1.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt
Project_Contract/: TA_Tog_project_idea.docx
Project_powerpoint/: Tog_demo.pptx
QT_UI_Design/: UI_GameOverScreen.ui  UI_LevelScreen.ui  UI_LevelSelection.ui  UI_MazeWindow.ui  UI_OptionsScreen.ui  ui_MazeWindow.cpp  ui_MazeWindow.h
QT_Utils/: MazeBoard.cpp  MazeBoard.h  MazeGUI.cpp  MazeGUI.h  MazeLayout.cpp  MazeLayout.h  MazeWindow.cpp  MazeWindow.h  MazeWindow.ui  MazeWindowLayout.ui
Ref_codes/: LostFunctions.cpp  reader_example.cpp
Workspace/: workspace.xml
